@@ -1,12 +1,11 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/pi0est.R
 \name{pi0est}
 \alias{pi0est}
 \title{Proportion of true null p-values}
 \usage{
-pi0est(p = NULL, lambda = seq(0.05, 0.95, 0.05),
-  pi0.method = c("smoother", "bootstrap"), smooth.df = 3,
-  smooth.log.pi0 = FALSE, ...)
+pi0est(p, lambda = seq(0.05, 0.95, 0.05), pi0.method = c("smoother",
+  "bootstrap"), smooth.df = 3, smooth.log.pi0 = FALSE, ...)
 }
 \arguments{
 \item{p}{A vector of p-values (only necessary input).}
