@@ -1,10 +1,10 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/qvalue.R
 \name{qvalue}
 \alias{qvalue}
 \title{Estimate the q-values for a given set of p-values}
 \usage{
-qvalue(p = NULL, fdr.level = NULL, pfdr = FALSE, ...)
+qvalue(p, fdr.level = NULL, pfdr = FALSE, ...)
 }
 \arguments{
 \item{p}{A vector of p-values (only necessary input).}
